@@ -1,11 +1,13 @@
 package br.eduprivate.effective.c5.item23;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Set;
 
 public class Raw {
     // Uses raw type (List) - fails at runtime! - Page 112
     public static void main(String[] args) {
         List<String> strings = new ArrayList<String>();
-        unsafeAdd(strings, new Integer(42));
+        unsafeAdd(strings, Integer.valueOf(42));
         String s = strings.get(0); // Compiler-generated cast
     }
 
